# TopGridScholar

./: .env.example  .gitignore  LICENSE  README.md  README_zh.md  app.py  bridge.py  config.py  pyproject.toml  requirements.txt  setup_browser.py
managers/: __init__.py  download_manager.py  file_organizer.py  keyword_history.py  result_store.py
pages/: 1_🔍_搜索.py  2_📋_结果.py  3_📥_下载.py
scrapers/: __init__.py  base.py  ieee.py  nature.py  semantic_scholar.py
topgridscholar/: app.py  cli.py  config.py  models.py  setup_browser.py  venues.py
topgridscholar/managers/: __init__.py  download_manager.py  file_organizer.py  keyword_history.py  result_store.py
topgridscholar/pages/: 1_🔍_搜索.py  2_📋_结果.py  3_📥_下载.py
topgridscholar/scrapers/: __init__.py  anti_scraping.py  base.py  ieee.py  nature.py  semantic_scholar.py
